Initialized hyperlinks in index. Added html and image for each recipe

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width">, initial-scale=1.0">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <h3>Below are a list of recipes to choose from</h3>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/pbj.html">Peanut Butter and Jelly Sandwich</a></li>
+        <li><a href="./recipes/toast-and-eggs.html">Toast and Eggs</a></li>
+    </ul>
 </body>
 </html>
