Add images to pbj and toast

--- a/recipes/pbj.html
+++ b/recipes/pbj.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Peanut Butter Jelly Sandwich</h1>
+    <h1>Peanut Butter and Jelly Sandwich</h1>
+    <img src="../photos/pbj.jpg" alt="a sliced in half pbj sandwich">
+    <p>This will be a short recipe for Peanut Butter and Jelly sandwich. It will include ingredients and steps.</p>
 </body>
 </html>
