--- a/recipes/toast-and-eggs.html
+++ b/recipes/toast-and-eggs.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Toast and Eggs</h1>
-</body>
+    <img src="../photos/toasteggs.jpg" alt="a plate of toast and eggs">
+    <p>This will be a short recipe for scrambled eggs and toast. It will include ingredients and steps.</p>
+    </body>
 </html>
